--- a/index.html
+++ b/index.html
@@ -367,6 +367,66 @@
       </div>
     </section>
 
+    <section class="branches-map" id="branches">
+      <div class="container">
+        <div class="section-title">
+          <h2>فروعنا</h2>
+          <p class="pb-3">نحن نخدم الطلاب من مواقع متعددة في مصر</p>
+        </div>
+        <div class="row">
+          <div class="col-lg-8 mb-4 order-lg-1 order-2">
+            <div class="map-container">
+              <div
+                id="map"
+                style="height: 450px; border-radius: 10px; overflow: hidden"
+              ></div>
+            </div>
+          </div>
+          <div class="col-lg-4 order-lg-2 order-1">
+            <div class="branches-list">
+              <h4 class="mb-4">مواقع فروعنا</h4>
+              <div class="branch-item" data-location="giza">
+                <div class="branch-icon">
+                  <i class="fas fa-map-marker-alt"></i>
+                </div>
+                <div class="branch-info">
+                  <h5>الجيزة</h5>
+                  <p>الفرع الرئيسي</p>
+                  <div class="branch-contact">
+                    <small><i class="fas fa-phone"></i> ٠١٠٢٠٢٥٥٤٩٧</small>
+                  </div>
+                </div>
+              </div>
+              <div class="branch-item" data-location="sharqia">
+                <div class="branch-icon">
+                  <i class="fas fa-map-marker-alt"></i>
+                </div>
+                <div class="branch-info">
+                  <h5>الشرقية</h5>
+                  <p>فرع الشرقية</p>
+                  <div class="branch-contact">
+                    <small><i class="fas fa-phone"></i> ٠١٥٥٢٦٧٥٥١٨</small>
+                  </div>
+                </div>
+              </div>
+              <div class="branch-item" data-location="luxor">
+                <div class="branch-icon">
+                  <i class="fas fa-map-marker-alt"></i>
+                </div>
+                <div class="branch-info">
+                  <h5>الأقصر</h5>
+                  <p>فرع الأقصر</p>
+                  <div class="branch-contact">
+                    <small><i class="fas fa-phone"></i> ٠١١٥٦٨٤٧٠٢٢</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="steps" id="steps">
       <div class="container">
         <div class="section-title">
@@ -895,6 +955,115 @@
       <img class="modal-content" id="modalImage" />
       <div id="caption" class="modal-caption"></div>
     </div>
+    <script>
+      // Map functionality
+      let map;
+      let markers = [];
+
+      // Branch locations with coordinates
+      const branches = {
+        giza: {
+          name: "الجيزة - الفرع الرئيسي",
+          coords: [30.0131, 31.2089], // Giza coordinates
+          phone: "٠١٠٢٠٢٥٥٤٩٧",
+        },
+        sharqia: {
+          name: "الشرقية",
+          coords: [30.5965, 31.5034], // Sharqia coordinates
+          phone: "٠١٥٥٢٦٧٥٥١٨",
+        },
+        luxor: {
+          name: "الأقصر",
+          coords: [25.6872, 32.6396], // Luxor coordinates
+          phone: "٠١١٥٦٨٤٧٠٢٢",
+        },
+      };
+
+      function initMap() {
+        // Initialize map centered on Egypt
+        map = L.map("map", {
+          center: [26.8206, 30.8025],
+          zoom: 6,
+          zoomControl: true,
+        });
+
+        // Add OpenStreetMap tiles
+        L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
+          attribution: "© OpenStreetMap contributors",
+          maxZoom: 18,
+        }).addTo(map);
+
+        // Add markers for each branch
+        Object.keys(branches).forEach((branchKey) => {
+          const branch = branches[branchKey];
+
+          // Create custom marker
+          const marker = L.marker(branch.coords).addTo(map).bindPopup(`
+        <div style="text-align: center; direction: rtl; font-family: 'Segoe UI', sans-serif;">
+          <strong style="color: #ff6b35; font-size: 16px;">${
+            branch.name
+          }</strong><br>
+          <div style="margin-top: 8px; color: #5c677d;">
+            <i class="fas fa-phone" style="color: #ff6b35; margin-left: 5px;"></i>
+            ${branch.phone}
+          </div>
+          <div style="margin-top: 10px;">
+            <a href="https://wa.me/2${branch.phone.replace(/[٠-٩]/g, (d) =>
+              "٠١٢٣٤٥٦٧٨٩".indexOf(d)
+            )}" 
+               target="_blank" 
+               style="background: #ff6b35; color: white; padding: 8px 15px; border-radius: 20px; text-decoration: none; font-size: 14px;">
+              <i class="fab fa-whatsapp"></i> تواصل معنا
+            </a>
+          </div>
+        </div>
+      `);
+
+          markers[branchKey] = marker;
+        });
+
+        // Add click handlers to branch items
+        document.querySelectorAll(".branch-item").forEach((item) => {
+          item.addEventListener("click", function () {
+            const location = this.getAttribute("data-location");
+
+            // Remove active class from all items
+            document
+              .querySelectorAll(".branch-item")
+              .forEach((i) => i.classList.remove("active"));
+
+            // Add active class to clicked item
+            this.classList.add("active");
+
+            // Center map on selected branch and zoom in
+            if (branches[location]) {
+              map.setView(branches[location].coords, 12);
+              markers[location].openPopup();
+            }
+          });
+        });
+      }
+
+      // Initialize map when page loads
+      document.addEventListener("DOMContentLoaded", function () {
+        // Load Leaflet CSS and JS
+        if (!document.querySelector('link[href*="leaflet"]')) {
+          const leafletCSS = document.createElement("link");
+          leafletCSS.rel = "stylesheet";
+          leafletCSS.href = "https://unpkg.com/leaflet@1.7.1/dist/leaflet.css";
+          document.head.appendChild(leafletCSS);
+        }
+
+        if (!window.L) {
+          const leafletJS = document.createElement("script");
+          leafletJS.src = "https://unpkg.com/leaflet@1.7.1/dist/leaflet.js";
+          leafletJS.onload = initMap;
+          document.head.appendChild(leafletJS);
+        } else {
+          initMap();
+        }
+      });
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./js/script.js"></script>
   </body>
