Update navigation and sections for branches; replace contact section with branches map and details

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 <a class="nav-link" href="#testimonials">آراء الطلاب</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#contact">اتصل بنا</a>
+                <a class="nav-link" href="#branches">فروعنا</a>
               </li>
             </ul>
             <div class="d-flex flex-column flex-lg-row align-items-center">
@@ -367,66 +367,6 @@
       </div>
     </section>
 
-    <section class="branches-map" id="branches">
-      <div class="container">
-        <div class="section-title">
-          <h2>فروعنا</h2>
-          <p class="pb-3">نحن نخدم الطلاب من مواقع متعددة في مصر</p>
-        </div>
-        <div class="row">
-          <div class="col-lg-8 mb-4 order-lg-1 order-2">
-            <div class="map-container">
-              <div
-                id="map"
-                style="height: 450px; border-radius: 10px; overflow: hidden"
-              ></div>
-            </div>
-          </div>
-          <div class="col-lg-4 order-lg-2 order-1">
-            <div class="branches-list">
-              <h4 class="mb-4">مواقع فروعنا</h4>
-              <div class="branch-item" data-location="giza">
-                <div class="branch-icon">
-                  <i class="fas fa-map-marker-alt"></i>
-                </div>
-                <div class="branch-info">
-                  <h5>الجيزة</h5>
-                  <p>الفرع الرئيسي</p>
-                  <div class="branch-contact">
-                    <small><i class="fas fa-phone"></i> ٠١٠٢٠٢٥٥٤٩٧</small>
-                  </div>
-                </div>
-              </div>
-              <div class="branch-item" data-location="sharqia">
-                <div class="branch-icon">
-                  <i class="fas fa-map-marker-alt"></i>
-                </div>
-                <div class="branch-info">
-                  <h5>الشرقية</h5>
-                  <p>فرع الشرقية</p>
-                  <div class="branch-contact">
-                    <small><i class="fas fa-phone"></i> ٠١٥٥٢٦٧٥٥١٨</small>
-                  </div>
-                </div>
-              </div>
-              <div class="branch-item" data-location="luxor">
-                <div class="branch-icon">
-                  <i class="fas fa-map-marker-alt"></i>
-                </div>
-                <div class="branch-info">
-                  <h5>الأقصر</h5>
-                  <p>فرع الأقصر</p>
-                  <div class="branch-contact">
-                    <small><i class="fas fa-phone"></i> ٠١١٥٦٨٤٧٠٢٢</small>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
     <section class="steps" id="steps">
       <div class="container">
         <div class="section-title">
@@ -497,7 +437,6 @@
       </div>
     </section>
 
-    <!-- Testimonials Section -->
     <section class="testimonials" id="testimonials">
       <div class="container">
         <div class="section-title">
@@ -719,7 +658,6 @@
               </div>
             </div>
           </div>
-          <!-- Carousel Controls: Arrows -->
           <button
             class="carousel-control-prev"
             id="carouselPrev"
@@ -777,96 +715,84 @@
       </div>
     </section>
 
-    <section class="contact" id="contact">
+    <section class="branches-map" id="branches">
       <div class="container">
         <div class="section-title">
-          <h2>اتصل بنا</h2>
+          <h2>فروعنا</h2>
+          <p class="pb-3">نحن نخدم الطلاب من مواقع متعددة في مصر</p>
         </div>
         <div class="row">
-          <div class="col-lg-7">
-            <div class="contact-form">
-              <h3 class="mb-4">أرسل لنا رسالة</h3>
-              <form>
-                <div class="row">
-                  <div class="col-md-6">
-                    <input
-                      type="text"
-                      class="form-control"
-                      placeholder="اسمك"
-                      required
-                    />
+          <div class="col-lg-8 order-lg-1 order-2">
+            <div class="row">
+              <div class="col-12 mb-4">
+                <div class="map-container">
+                  <div
+                    id="map"
+                    style="height: 450px; border-radius: 10px; overflow: hidden"
+                  ></div>
+                </div>
+              </div>
+              <div class="col-12">
+                <div class="contact-info row">
+                  <div class="contact-item col-lg-7 col-sm-12">
+                    <div class="contact-icon">
+                      <i class="fas fa-envelope"></i>
+                    </div>
+                    <div>
+                      <h5>راسلنا عبر البريد الإلكتروني</h5>
+                      <p>externaleducation2015@gmail.com</p>
+                    </div>
                   </div>
-                  <div class="col-md-6">
-                    <input
-                      type="email"
-                      class="form-control"
-                      placeholder="بريدك الإلكتروني"
-                      required
-                    />
+                  <div class="contact-item col-lg-5 col-sm-12">
+                    <div class="contact-icon">
+                      <i class="fas fa-clock"></i>
+                    </div>
+                    <div>
+                      <h5>ساعات العمل</h5>
+                      <p>يومياً: ٩ صباحًا - ٩ مساءً</p>
+                    </div>
                   </div>
                 </div>
-                <input type="text" class="form-control" placeholder="الموضوع" />
-                <textarea
-                  class="form-control"
-                  rows="5"
-                  placeholder="رسالتك"
-                  required
-                ></textarea>
-                <button type="submit" class="btn btn-primary">
-                  إرسال الرسالة
-                </button>
-              </form>
+              </div>
             </div>
           </div>
-          <div class="col-lg-5">
-            <div class="contact-info">
-              <h3 class="mb-4">ابقى على تواصل</h3>
-              <div class="contact-item">
-                <div class="contact-icon">
+          <div class="col-lg-4 order-lg-2 order-1 mb-4">
+            <div class="branches-list">
+              <h4 class="mb-4">مواقع فروعنا</h4>
+              <div class="branch-item" data-location="giza">
+                <div class="branch-icon">
                   <i class="fas fa-map-marker-alt"></i>
                 </div>
-                <div>
-                  <h5>موقعنا</h5>
-                  <p>الجيزة - الشرقية - الأقصر</p>
+                <div class="branch-info">
+                  <h5>الجيزة</h5>
+                  <p>الفرع الرئيسي</p>
+                  <div class="branch-contact">
+                    <small><i class="fas fa-phone"></i> ٠١٠٢٠٢٥٥٤٩٧</small>
+                  </div>
                 </div>
               </div>
-              <div class="contact-item">
-                <div class="contact-icon">
-                  <i class="fas fa-phone-alt"></i>
+              <div class="branch-item" data-location="sharqia">
+                <div class="branch-icon">
+                  <i class="fas fa-map-marker-alt"></i>
                 </div>
-                <div>
-                  <h5>اتصل بنا</h5>
-                  <p class="mb-1" dir="ltr">٠١٠٢٠٢٥٥٤٩٧</p>
-                  <p class="mb-1" dir="ltr">٠١٥٥٢٦٧٥٥١٨</p>
-                  <p class="mb-1" dir="ltr">٠١١٥٦٨٤٧٠٢٢</p>
-                  <p class="mb-1" dir="ltr">٠١١٠٤٣١٥٦٢٢</p>
-                </div>
-              </div>
-              <div class="contact-item">
-                <div class="contact-icon">
-                  <i class="fas fa-envelope"></i>
-                </div>
-                <div>
-                  <h5>راسلنا عبر البريد الإلكتروني</h5>
-                  <p>externaleducation2015@gmail.com</p>
+                <div class="branch-info">
+                  <h5>الشرقية</h5>
+                  <p>فرع الشرقية</p>
+                  <div class="branch-contact">
+                    <small><i class="fas fa-phone"></i> ٠١٥٥٢٦٧٥٥١٨</small>
+                  </div>
                 </div>
               </div>
-              <div class="contact-item">
-                <div class="contact-icon">
-                  <i class="fas fa-file-invoice-dollar"></i>
+              <div class="branch-item" data-location="luxor">
+                <div class="branch-icon">
+                  <i class="fas fa-map-marker-alt"></i>
                 </div>
-                <div>
-                  <h5>التسجيل الضريبي</h5>
-                  <p>٧٦٨-٧٤٣-٠٤٤</p>
-                </div>
-              </div>
-              <div class="contact-item">
-                <div class="contact-icon">
-                  <i class="fas fa-clock"></i>
-                </div>
-                <div>
-                  <h5>ساعات العمل</h5>
-                  <p>يومياً: ٩ صباحًا - ٩ مساءً</p>
+                <div class="branch-info">
+                  <h5>الأقصر</h5>
+                  <p>فرع الأقصر</p>
+                  <div class="branch-contact">
+                    <small><i class="fas fa-phone"></i> ٠١١٥٦٨٤٧٠٢٢</small>
+                  </div>
                 </div>
               </div>
             </div>
@@ -909,7 +835,7 @@
               <li><a href="#about">من نحن</a></li>
               <li><a href="#services">خدماتنا</a></li>
               <li><a href="#testimonials">آراء الطلاب</a></li>
-              <li><a href="#contact">اتصل بنا</a></li>
+              <li><a href="#branches">فروعنا</a></li>
             </ul>
           </div>
 
@@ -921,7 +847,7 @@
               <li><a href="#services">خدماتنا</a></li>
               <li><a href="#global-destinations">الوجهات الدراسية</a></li>
               <li><a href="#testimonials">آراء الطلاب</a></li>
-              <li><a href="#contact">اتصل بنا</a></li>
+              <li><a href="#branches">فروعنا</a></li>
             </ul>
           </div>
 
@@ -999,25 +925,25 @@
 
           // Create custom marker
           const marker = L.marker(branch.coords).addTo(map).bindPopup(`
-        <div style="text-align: center; direction: rtl; font-family: 'Segoe UI', sans-serif;">
-          <strong style="color: #ff6b35; font-size: 16px;">${
-            branch.name
-          }</strong><br>
-          <div style="margin-top: 8px; color: #5c677d;">
-            <i class="fas fa-phone" style="color: #ff6b35; margin-left: 5px;"></i>
-            ${branch.phone}
-          </div>
-          <div style="margin-top: 10px;">
-            <a href="https://wa.me/2${branch.phone.replace(/[٠-٩]/g, (d) =>
-              "٠١٢٣٤٥٦٧٨٩".indexOf(d)
-            )}" 
-               target="_blank" 
-               style="background: #ff6b35; color: white; padding: 8px 15px; border-radius: 20px; text-decoration: none; font-size: 14px;">
-              <i class="fab fa-whatsapp"></i> تواصل معنا
-            </a>
-          </div>
-        </div>
-      `);
+            <div style="text-align: center; direction: rtl; font-family: 'Segoe UI', sans-serif;">
+              <strong style="color: #ff6b35; font-size: 16px;">${
+                branch.name
+              }</strong><br>
+              <div style="margin-top: 8px; color: #5c677d;">
+                <i class="fas fa-phone" style="color: #ff6b35; margin-left: 5px;"></i>
+                ${branch.phone}
+              </div>
+              <div style="margin-top: 10px;">
+                <a href="https://wa.me/2${branch.phone.replace(/[٠-٩]/g, (d) =>
+                  "٠١٢٣٤٥٦٧٨٩".indexOf(d)
+                )}" 
+                   target="_blank" 
+                   style="background: #ff6b35; color: white; padding: 8px 15px; border-radius: 20px; text-decoration: none; font-size: 14px;">
+                  <i class="fab fa-whatsapp"></i> تواصل معنا
+                </a>
+              </div>
+            </div>
+          `);
 
           markers[branchKey] = marker;
         });
