--- a/index-en.html
+++ b/index-en.html
@@ -156,7 +156,7 @@
                 <a class="nav-link" href="#testimonials">Testimonials</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#contact">Contact</a>
+                <a class="nav-link" href="#branches">Branches</a>
               </li>
             </ul>
             <div class="d-flex flex-column flex-lg-row align-items-center">
@@ -371,66 +371,6 @@
       </div>
     </section>
 
-    <section class="branches-map" id="branches">
-      <div class="container">
-        <div class="section-title">
-          <h2>Our Branches</h2>
-          <p class="pb-3">We serve students from multiple locations in Egypt</p>
-        </div>
-        <div class="row">
-          <div class="col-lg-8 mb-4 order-lg-1 order-2">
-            <div class="map-container">
-              <div
-                id="map"
-                style="height: 450px; border-radius: 10px; overflow: hidden"
-              ></div>
-            </div>
-          </div>
-          <div class="col-lg-4 order-lg-2 order-1">
-            <div class="branches-list">
-              <h4 class="mb-4">Our Branch Locations</h4>
-              <div class="branch-item" data-location="giza">
-                <div class="branch-icon">
-                  <i class="fas fa-map-marker-alt"></i>
-                </div>
-                <div class="branch-info">
-                  <h5>Giza</h5>
-                  <p>Main Branch</p>
-                  <div class="branch-contact">
-                    <small><i class="fas fa-phone"></i> +20 102 025 5497</small>
-                  </div>
-                </div>
-              </div>
-              <div class="branch-item" data-location="sharqia">
-                <div class="branch-icon">
-                  <i class="fas fa-map-marker-alt"></i>
-                </div>
-                <div class="branch-info">
-                  <h5>Sharqia</h5>
-                  <p>Sharqia Branch</p>
-                  <div class="branch-contact">
-                    <small><i class="fas fa-phone"></i> +20 155 267 5518</small>
-                  </div>
-                </div>
-              </div>
-              <div class="branch-item" data-location="luxor">
-                <div class="branch-icon">
-                  <i class="fas fa-map-marker-alt"></i>
-                </div>
-                <div class="branch-info">
-                  <h5>Luxor</h5>
-                  <p>Luxor Branch</p>
-                  <div class="branch-contact">
-                    <small><i class="fas fa-phone"></i> +20 115 684 7022</small>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
     <section class="steps" id="steps">
       <div class="container">
         <div class="section-title">
@@ -503,7 +443,6 @@
       </div>
     </section>
 
-    <!-- Testimonials Section -->
     <section class="testimonials" id="testimonials">
       <div class="container">
         <div class="section-title">
@@ -729,7 +668,6 @@
               </div>
             </div>
           </div>
-          <!-- Carousel Controls: Arrows -->
           <button
             class="carousel-control-prev"
             id="carouselPrev"
@@ -790,87 +728,84 @@
       </div>
     </section>
 
-    <section class="contact" id="contact">
+    <section class="branches-map" id="branches">
       <div class="container">
         <div class="section-title">
-          <h2>Contact Us</h2>
+          <h2>Our Branches</h2>
+          <p class="pb-3">We serve students from multiple locations in Egypt</p>
         </div>
         <div class="row">
-          <div class="col-lg-7">
-            <div class="contact-form">
-              <h3 class="mb-4">Send Us a Message</h3>
-              <form>
-                <div class="row">
-                  <div class="col-md-6">
-                    <input
-                      type="text"
-                      class="form-control"
-                      placeholder="Your Name"
-                      required
-                    />
+          <div class="col-lg-8 order-lg-1 order-2">
+            <div class="row">
+              <div class="col-12 mb-4">
+                <div class="map-container">
+                  <div
+                    id="map"
+                    style="height: 450px; border-radius: 10px; overflow: hidden"
+                  ></div>
+                </div>
+              </div>
+              <div class="col-12">
+                <div class="contact-info row">
+                  <div class="contact-item col-lg-7 col-sm-12">
+                    <div class="contact-icon">
+                      <i class="fas fa-envelope"></i>
+                    </div>
+                    <div>
+                      <h5>Email Us</h5>
+                      <p>externaleducation2015@gmail.com</p>
+                    </div>
                   </div>
-                  <div class="col-md-6">
-                    <input
-                      type="email"
-                      class="form-control"
-                      placeholder="Your Email"
-                      required
-                    />
+                  <div class="contact-item col-lg-7 col-sm-12">
+                    <div class="contact-icon">
+                      <i class="fas fa-clock"></i>
+                    </div>
+                    <div>
+                      <h5>Working Hours</h5>
+                      <p>Every Day: 9AM - 9PM</p>
+                    </div>
                   </div>
                 </div>
-                <input type="text" class="form-control" placeholder="Subject" />
-                <textarea
-                  class="form-control"
-                  rows="5"
-                  placeholder="Your Message"
-                  required
-                ></textarea>
-                <button type="submit" class="btn btn-primary">
-                  Send Message
-                </button>
-              </form>
+              </div>
             </div>
           </div>
-          <div class="col-lg-5">
-            <div class="contact-info">
-              <h3 class="mb-4">Get In Touch</h3>
-              <div class="contact-item">
-                <div class="contact-icon">
+          <div class="col-lg-4 order-lg-2 order-1 mb-4">
+            <div class="branches-list">
+              <h4 class="mb-4">Our Branch Locations</h4>
+              <div class="branch-item" data-location="giza">
+                <div class="branch-icon">
                   <i class="fas fa-map-marker-alt"></i>
                 </div>
-                <div>
-                  <h5>Our Location</h5>
-                  <p>Giza - Sharqia - Luxor</p>
+                <div class="branch-info">
+                  <h5>Giza</h5>
+                  <p>Main Branch</p>
+                  <div class="branch-contact">
+                    <small><i class="fas fa-phone"></i> +20 102 025 5497</small>
+                  </div>
                 </div>
               </div>
-              <div class="contact-item">
-                <div class="contact-icon">
-                  <i class="fas fa-phone-alt"></i>
+              <div class="branch-item" data-location="sharqia">
+                <div class="branch-icon">
+                  <i class="fas fa-map-marker-alt"></i>
                 </div>
-                <div>
-                  <h5>Call Us</h5>
-                  <p class="mb-1">+20 102 025 5497</p>
-                  <p class="mb-1">+20 155 267 5518</p>
-                  <p class="mb-1">+20 115 684 7022</p>
-                  <p class="mb-1">+20 110 431 5622</p>
-                </div>
-              </div>
-              <div class="contact-item">
-                <div class="contact-icon">
-                  <i class="fas fa-envelope"></i>
-                </div>
-                <div>
-                  <h5>Email Us</h5>
-                  <p>externaleducation2015@gmail.com</p>
+                <div class="branch-info">
+                  <h5>Sharqia</h5>
+                  <p>Sharqia Branch</p>
+                  <div class="branch-contact">
+                    <small><i class="fas fa-phone"></i> +20 155 267 5518</small>
+                  </div>
                 </div>
               </div>
-              <div class="contact-item">
-                <div class="contact-icon">
-                  <i class="fas fa-clock"></i>
+              <div class="branch-item" data-location="luxor">
+                <div class="branch-icon">
+                  <i class="fas fa-map-marker-alt"></i>
                 </div>
-                <div>
-                  <h5>Working Hours</h5>
-                  <p>Every Day: 9AM - 9PM</p>
+                <div class="branch-info">
+                  <h5>Luxor</h5>
+                  <p>Luxor Branch</p>
+                  <div class="branch-contact">
+                    <small><i class="fas fa-phone"></i> +20 115 684 7022</small>
+                  </div>
                 </div>
               </div>
             </div>
@@ -913,7 +848,7 @@
               <li><a href="#about">About Us</a></li>
               <li><a href="#services">Services</a></li>
               <li><a href="#testimonials">Testimonials</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li><a href="#branches">Branches</a></li>
             </ul>
           </div>
 
@@ -925,7 +860,7 @@
               <li><a href="#services">Services</a></li>
               <li><a href="#global-destinations">Destinations</a></li>
               <li><a href="#testimonials">Testimonials</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li><a href="#branches">Branches</a></li>
             </ul>
           </div>
 
@@ -952,6 +887,7 @@
         </div>
       </div>
     </footer>
+
     <div id="imageModal" class="image-modal">
       <span class="close-button">&times;</span>
       <img class="modal-content" id="modalImage" />
